amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/empty-object.api.report
ModelId: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/empty-object.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#empty-definition
  Message: Type definitions must have at least one field
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/empty-object.api.graphql#/declares/shape/Person
  Property: http://www.w3.org/ns/shacl#property
  Range: [(9,0)-(9,11)]
  Location: 
